@@ -10,6 +10,10 @@ Fixed: concurrency issue in JUnitXMLReporter
 Fixed: output of JUnitXMLReporter must be CDATA
 Fixed: XML unsupported annotations/parallel attribute values are reported
 
+Eclipse plug-in
+Fixed: consistent behavior for dependsOnMethods
+Fixed: consistent behavior for tests with dependsOnGroups (a warning is emitted)
+Fixed: consistent merge of configuration arguments when an existing launch configuration exists 
 ===========================================================================
 5.3
 
